Update OpenZeppelin Contracts and Forge Standard Library dependencies, add new deployment scripts, and introduce new server utilities and UI components.

--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,11 @@
 
 # production
 /build
+/contracts/broadcasts
+/contracts/cache
+/contracts/artifacts
+/contracts/typechain-types
+/contracts/dist
 
 # misc
 .DS_Store
