--- a/package.json
+++ b/package.json
@@ -9,10 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.90.16",
+    "clsx": "^2.1.1",
+    "framer-motion": "^12.24.0",
     "lucide-react": "^0.562.0",
     "next": "^15.0.0",
     "react": "^19.2.3",
-    "react-dom": "^19.2.3"
+    "react-dom": "^19.2.3",
+    "tailwind-merge": "^3.4.0",
+    "viem": "^2.43.5",
+    "wagmi": "^3.1.4"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
