--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@coinbase/wallet-sdk": "^4.3.7",
+    "@metamask/sdk": "^0.34.0",
     "@tanstack/react-query": "^5.90.16",
+    "@walletconnect/ethereum-provider": "^2.23.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.24.0",
     "lucide-react": "^0.562.0",
