--- a/contracts/foundry.toml
+++ b/contracts/foundry.toml
@@ -5,6 +5,7 @@ libs = ["lib"]
 solc = "0.8.20"
 optimizer = true
 optimizer_runs = 200
+via_ir = true
 
 [rpc_endpoints]
 liskSepolia = "https://rpc.sepolia-api.lisk.com"
